# StarbornCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Content/Shader/: galaxy_fragment_shader.frag  galaxy_geometry_shader.geom  galaxy_vertex_shader.vert  rotation_vertex_shader.vert
Starborn_Exe/: CMakeCache.txt  Makefile  Starborn_02.cbp  cmake_install.cmake
Starborn_Exe/Content/Shader/: galaxy_fragment_shader.frag  galaxy_geometry_shader.geom  galaxy_vertex_shader.vert  rotation_vertex_shader.vert
